--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -78,7 +78,9 @@
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
 
-      FB.api('/1701611166801933?fields=access_token', function(response) {
+      //appId = "1701611166801933";
+      appId = "109482383082591";
+      FB.api('/'+appId+'?fields=access_token', function(response) {
          console.log('access_token: ');
 		 console.log( response);
          document.getElementById('access_token').innerHTML = response.access_token;
